fixing navbar on mobile

--- a/styles/body_style.css
+++ b/styles/body_style.css
@@ -3,14 +3,7 @@ p {
 }
 
 
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-}
+
 
 .row {
     margin-bottom: 5%;
