--- a/styles/header_style.css
+++ b/styles/header_style.css
@@ -29,7 +29,7 @@
     height: 50px;
 }
 
-
+/*
 .navbar-alignit .navbar-header {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
@@ -41,9 +41,11 @@
     display: block;
     position: relative;
     height: auto;
-
+    transform: translate(0,-50%);
+    margin-right: 15px;
+    margin-left: 15px;
 }
-
+*/
 nav.navbar {
     width: inherit;
     margin-left:auto;
